Differentiated change of l3sort from other old modules
This also sets a 'sunset' date for all of the old module code.

--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -127,18 +127,22 @@
 \typeout{** }
 \typeout{** Package \old@liii@module@name\space is obsolete and has been removed!}
 \typeout{** }
-\typeout{** Its functionality is now only provided as part of in the expl3 package}
+\typeout{** Its functionality is now only provided as part of in the expl3 package.}
 \typeout{** }
-\typeout{** After showing you an error message you can hit <return> we will continue}
-\typeout{** for now by loading expl3 for you. However, at some point in the future}
-\typeout{** the old packages will be removed.}
+%<!l3sort>\typeout{** After showing you an error message you can hit <return> we will continue}
+%<!l3sort>\typeout{** for now by loading expl3 for you. However, the old packages will be}
+%<!l3sort>\typeout{** removed entirely at the end of 2017.}
+%<l3sort>\typeout{** The old packages will be removed entirely at the end of 2018.}
 \typeout{** }
 \typeout{** Therefore, please replace '\string\usepackage{\old@liii@module@name}'}
 \typeout{** with '\string\usepackage{expl3}' in your documents as soon as possible.}
 \typeout{** }
 \typeout{*******************************************************************}
-\PackageError\old@liii@module@name{This package is obsolete ---
-   use 'expl3' instead}\@ehc
+%<!l3sort>\PackageError
+%<l3sort>\PackageWarning
+  \old@liii@module@name{This package is obsolete ---
+   use 'expl3' instead}
+%<!l3sort>  \@ehc
 %    \end{macrocode}
 %    Finally load \texttt{expl3} so that the user can continue for now.
 %    \begin{macrocode}
