Make error messages more informative
Include function name in most error messages given by xparse.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1462,15 +1462,16 @@
       \q_recursion_tail \q_recursion_tail \q_recursion_tail \q_recursion_stop
     \int_compare:nNnT \l_@@_current_arg_int > 9
       {
-        \__msg_kernel_error:nnx { xparse } { too-many-arguments }
-          { \tl_to_str:n {#1} }
+        \__msg_kernel_error:nnxx { xparse } { too-many-arguments }
+          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
     \bool_if:NT \l_@@_expandable_bool
       {
         \tl_if_empty:NF \l_@@_last_delimiters_tl
           {
-            \__msg_kernel_error:nn { xparse } { expandable-ending-optional }
+            \__msg_kernel_error:nnxx { xparse } { expandable-ending-optional }
+              { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
             \@@_bad_def:wn
           }
       }
@@ -1481,8 +1482,8 @@
     \int_incr:N \l_@@_current_arg_int
     \cs_if_exist_use:cF { @@_normalize_type_ \tl_to_str:n {#1} :w }
       {
-        \__msg_kernel_error:nnx { xparse } { unknown-argument-type }
-          { \tl_to_str:n {#1} }
+        \__msg_kernel_error:nnxx { xparse } { unknown-argument-type }
+          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
   }
@@ -1554,8 +1555,8 @@
     \quark_if_recursion_tail_stop_do:nn {#2} { \@@_bad_arg_spec:wn }
     \bool_if:NT \l_@@_expandable_bool
       {
-        \__msg_kernel_error:nnx { xparse } { processor-in-expandable }
-          { \iow_char:N\\ \l_@@_function_tl }
+        \__msg_kernel_error:nnxx { xparse } { processor-in-expandable }
+          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
     \tl_put_right:Nn \l_@@_arg_spec_tl { > {#1} }
@@ -1701,8 +1702,8 @@
   {
     \exp_args:Nx \tl_if_single_token:nF { \tl_trim_spaces:n {#1} }
       {
-        \__msg_kernel_error:nnx { xparse } { not-single-token }
-          { \tl_to_str:n {#1} }
+        \__msg_kernel_error:nnxx { xparse } { not-single-token }
+          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
   }
@@ -1716,8 +1717,9 @@
   {
     \bool_if:NT \l_@@_expandable_bool
       {
-        \__msg_kernel_error:nnx
-          { xparse } { invalid-expandable-argument-type } {#1}
+        \__msg_kernel_error:nnxx
+          { xparse } { invalid-expandable-argument-type }
+          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
   }
@@ -1749,7 +1751,10 @@
 %   definition process.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_bad_arg_spec:wn #1 \@@_break_point:n #2
-  { \__msg_kernel_error:nnx { xparse } { bad-arg-spec } { \tl_to_str:n {#2} } }
+  {
+    \__msg_kernel_error:nnxx { xparse } { bad-arg-spec }
+      { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#2} }
+  }
 \cs_new_protected:Npn \@@_bad_def:wn #1 \@@_break_point:n #2 { }
 %    \end{macrocode}
 % \end{macro}
@@ -2227,7 +2232,8 @@
     \bool_if:nT
       { \bool_xor_p:nn { \l_@@_all_long_bool } { \l_@@_long_bool } }
       {
-        \__msg_kernel_error:nn { xparse } { inconsistent-long }
+        \__msg_kernel_error:nnx { xparse } { inconsistent-long }
+          { \iow_char:N \\ \l_@@_function_tl }
         \@@_bad_def:wn
       }
     \bool_set_false:N \l_@@_long_bool
@@ -2682,7 +2688,8 @@
     \peek_meaning_remove_ignore_spaces:NTF #1
       { \@@_grab_D_call:Nw #1 }
       {
-        \__msg_kernel_error:nnx { xparse } { missing-required }
+        \__msg_kernel_error:nnxx { xparse } { missing-required }
+          { \exp_after:wN \token_to_str:N \l_@@_fn_tl }
           { \token_to_str:N #1 }
         \@@_add_arg:o \c_@@_no_value_tl
       }
@@ -3230,8 +3237,8 @@
               \q_nil { } ##2 \ERROR \q_@@ \ERROR
           }
           {
-            \__msg_kernel_expandable_error:nnn
-              { xparse } { missing-required } {##2}
+            \__msg_kernel_expandable_error:nnnn
+              { xparse } { missing-required } {##5} {##2}
             ##4 {#1} \q_@@ ##5 {##6}
           }
       }
@@ -3262,8 +3269,8 @@
               ##5 \ERROR
           }
           {
-            \__msg_kernel_expandable_error:nnn
-              { xparse } { missing-required } {##2}
+            \__msg_kernel_expandable_error:nnnn
+              { xparse } { missing-required } {##4} {##2}
             ##3 {#1} \q_@@ ##4 {##5}
           }
       }
@@ -3673,7 +3680,7 @@
 % Some messages intended as errors.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { xparse } { bad-arg-spec }
-  { Bad~argument~specification~'#1'. }
+  { Bad~argument~specification~'#2'~for~command~'#1'. }
   {
     \c__msg_coding_error_text_tl
     The~argument~specification~provided~was~not~valid:~
@@ -3710,7 +3717,8 @@
   }
 \__msg_kernel_new:nnnn { xparse } { expandable-ending-optional }
   {
-    Argument~specification~for~expandable~command~ends~with~optional~argument.
+    Argument~specification~'#2'~for~expandable~command~'#1'~
+    ends~with~optional~argument.
   }
   {
     \c__msg_coding_error_text_tl
@@ -3719,34 +3727,33 @@
     argument~with~expandable~commands.
   }
 \__msg_kernel_new:nnnn { xparse } { inconsistent-long }
-  { Inconsistent~long~arguments~for~expandable~command. }
+  { Inconsistent~long~arguments~for~expandable~command~'#1'. }
   {
     \c__msg_coding_error_text_tl
     The~arguments~for~an~expandable~command~must~either~all~be~
     short~or~all~be~long.~You~have~tried~to~mix~the~two~types.
   }
 \__msg_kernel_new:nnnn { xparse } { invalid-expandable-argument-type }
-  { Argument~type~'#1'~not~available~for~an~expandable~function. }
+  { Argument~type~'#2'~not~available~for~expandable~command~'#1'. }
   {
     \c__msg_coding_error_text_tl
-    The~letter~'#1'~does~not~specify~an~argument~type~which~can~be~used~
-    in~an~expandable~function.
+    The~letter~'#2'~does~not~specify~an~argument~type~which~can~be~used~
+    in~an~expandable~command.
     \\ \\
     LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { loop-in-defaults }
-  { Unresolved~circular~dependency~in~default~values~for~'#1'. }
+  { Circular~dependency~in~defaults~of~'#1'. }
   {
     \c__msg_coding_error_text_tl
     The~default~values~of~two~or~more~arguments~of~'#1'~depend~on~each~
     other~in~a~way~that~cannot~be~resolved.
   }
 \__msg_kernel_new:nnnn { xparse } { missing-required }
-  { Failed~to~find~required~argument~starting~with~'#1'. }
+  { Failed~to~find~required~argument~starting~with~'#2'~for~command~'#1'. }
   {
-    There~is~supposed~to~be~an~argument~to~the~current~function~starting~with~
-    '#1'.~LaTeX~did~not~find~it,~and~will~insert~a~default~value~to~be~
-    processed.
+    The~current~command~'#1'~expects~an~argument~starting~with~'#2'.~
+    LaTeX~did~not~find~it,~and~will~insert~a~default~value~to~be~processed.
   }
 \__msg_kernel_new:nnnn { xparse } { non-xparse-command }
   { Command~'#1'~not~defined~using~xparse. }
@@ -3781,19 +3788,19 @@
     LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { not-single-token }
-  { Argument~delimiter~should~be~a~single~token:~'#1'. }
+  { Argument~delimiter~'#2'~for~the~command~'#1'~should~be~a~single~token. }
   {
     \c__msg_coding_error_text_tl
     The~argument~specification~provided~was~not~valid:~
-    in~a~place~where~a~single~token~is~required,~LaTeX~found~'#1'. \\ \\
+    in~a~place~where~a~single~token~is~required,~LaTeX~found~'#2'. \\ \\
     LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { processor-in-expandable }
-  { Argument~processors~cannot~be~used~with~expandable~functions. }
+  { Argument~processor~'>{#2}'~cannot~be~used~for~the~expandable~command~'#1'. }
   {
     \c__msg_coding_error_text_tl
     The~argument~specification~for~#1~contains~a~processor~function:~
-    this~is~only~supported~for~standard~robust~functions. \\ \\
+    this~is~only~supported~for~standard~robust~commands. \\ \\
     LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { split-excess-tokens }
@@ -3804,7 +3811,7 @@
     There~were~too~many~'#1'~tokens.
   }
 \__msg_kernel_new:nnnn { xparse } { too-many-arguments }
-  { Too~many~arguments~in~argument~specification~'#1'. }
+  { Too~many~arguments~in~argument~specification~'#2'~of~command~'#1'. }
   {
     \c__msg_coding_error_text_tl
     The~argument~specification~provided~has~more~than~9~arguments.~
@@ -3812,10 +3819,10 @@
     LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { unknown-argument-type }
-  { Unknown~argument~type~'#1'~replaced~by~'m'. }
+  { Unknown~argument~type~'#2'~for~the~command~'#1'. }
   {
     \c__msg_coding_error_text_tl
-    The~letter~'#1'~does~not~specify~a~known~argument~type.~
+    The~letter~'#2'~does~not~specify~a~known~argument~type.~
     LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { unknown-command }
